# renderbridge-mod

./: .gitignore  IFLOW.md  RenderBridgeFull.md  build.gradle  settings.gradle
native/: CMakeLists.txt
native/include/: Platform.h  Renderer.h  RendererNative.h  com_dongge0210_renderbridge_NativeBridge.h
native/include/backend/: D3D11Backend.h  OpenGLBackend.h  VulkanBackend.h
native/src/: D3D11Backend.cpp  OpenGLBackend.cpp  Renderer.cpp  RendererBackend.cpp  RendererNative.cpp  VulkanBackend.cpp
src/main/java/com/dongge0210/renderbridge/: NativeBridge.java  NativeLoader.java  RenderBridgeMod.java  Renderer.java  RendererType.java
